--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  font_awesome_flutter: ^10.8.0
   freezed_annotation: ^2.4.4
   hive_ce: ^2.11.3
   hive_ce_flutter: ^2.1.0
+  image: ^4.5.4
+  image_picker: ^1.1.2
   json_annotation: ^4.9.0
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.0+1
   riverpod_annotation: ^2.6.1
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
